--- a/FoodDeliveryrestart/appsettings.json
+++ b/FoodDeliveryrestart/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "FoodDeliveryrestartContext": "Server=(localdb)\\mssqllocaldb;Database=FoodDeliveryrestartContext;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
