--- a/FoodDeliveryrestart/appsettings.json
+++ b/FoodDeliveryrestart/appsettings.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "FoodDeliveryrestartContext": "Server=(localdb)\\mssqllocaldb;Database=FoodDeliveryrestartContext;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "FoodDeliveryrestartContext": "Server=(localdb)\\mssqllocaldb;Database=FoodDeliveryrestartContext;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "IdentityContext": "Server=(localdb)\\mssqllocaldb;Database=IdentityContext;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
